Overflow fix, button fix, home button fix

--- a/sfa.Tl.Marketing.Communication/Frontend/src/scss/helpers/_reset.scss
+++ b/sfa.Tl.Marketing.Communication/Frontend/src/scss/helpers/_reset.scss
@@ -387,5 +387,5 @@ input, select {
 /* Overflow fix */
 
 .tl-overflow--fix {
-    overflow-x: auto;
+    overflow-x: hidden;
 }
